--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,12 +56,19 @@
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon" type="image/png"/>
 <link href="{{ site.asset_url }}/apple-touch-icon.png" rel="apple-touch-icon-precomposed" type="image/png"/>
 <link href="{{ site.asset_url }}/lib/normalize.css" rel="stylesheet" type="text/css"/>
-<link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/> 
+<link href="{{ site.asset_url }}/css/monokai.css" rel="stylesheet" type="text/css"/>
 <link href="{{ site.asset_url }}/lib/magnific-popup.min.css" rel="stylesheet" type="text/css"/>
-<link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/> 
+<link href="{{ site.asset_url }}/fonts/Kakao.css" rel="stylesheet" type="text/css"/>
 <link href="{{ site.asset_url }}/css/screen.css" rel="stylesheet" type="text/css"/>
 <script>
     if (window.location.host.indexOf('tech.kakao.com') > -1 && window.location.protocol == "https:"){
         window.location = window.location.toString().replace(/^https:/, "http:");
     }
 </script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NZ7M7K3');</script>
+<!-- End Google Tag Manager -->
