--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,7 @@
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NZ7M7K3"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 <div id="header">
     <button id="menu-toggle" type="button">
         <span class="sr-only">Toggle Navigation Menu</span>
@@ -35,4 +39,3 @@
         exclude: ['Welcome']
     })
 </script><!-- #header -->
-
