--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -28,12 +28,9 @@
         </li>
     </ul>
     <ul id="footer-menu">
-        <li><a href="//www.kakaocorp.com">Kakao</a></li>
-        <li><a href="//www.kakaocorp.com/recruit/currentOpportunities">Jobs</a></li>
-        <li><a href="//privacy.kakaocorp.com">Privacy</a></li>
+        <li><a href="http://blog.naver.com/skykbc">My Blog</a></li>
     </ul>
     <p id="copyright">
-        <a href="//www.kakaocorp.com">Copyright &copy; Kakao Corp.</a>
-        All rights reserved.
+        Powered by <a href="https://pages.github.com">GitHub Pages</a> and <a href="https://jekyllrb.com">Jekyll</a>
     </p>
 </div><!--#footer-->
