--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -17,7 +17,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Kakao', sans-serif;
+    font-family: 'NanumBarunGothicBold', sans-serif;
     font-weight: 400;
     color: #1e1e1e;
 }
@@ -299,7 +299,7 @@ for small screen(<720px):
 }
 
 #wrapper {
-    padding-bottom: 100px;
+    padding-bottom: 50px;
     background-color: #f4f4f4;
     overflow-x: scroll; /* @@iolo for very long title/tags */
 }
@@ -401,7 +401,7 @@ for small screen(<720px):
 #cover {
     display: table;
     width: 100%;
-    height: 310px;
+    height: 200px;
     padding: 0;
     background: no-repeat center;
     background-size: cover;
@@ -546,7 +546,7 @@ for small screen(<720px):
 #cover,
 #navbar,
 #footer {
-    font-family: 'Kakao', sans-serif !important;
+    font-family: 'NanumBarunGothicBold', sans-serif !important;
 }
 
 /* list(loop) */
@@ -560,8 +560,8 @@ for small screen(<720px):
 #post-list .post-item {
     list-style: none;
     position: relative;
-    margin: 0 40px;
-    padding: 50px 0 50px 40px;
+    margin: 0 35px;
+    padding: 30px 0 30px 30px;
     border-bottom: 1px solid #e6e6e6;
 }
 
@@ -595,7 +595,7 @@ for small screen(<720px):
 
 #post-list .post-meta {
     position: absolute;
-    top: 63px;
+    top: 33px;
     right: 0;
     width: 140px;
 }
@@ -838,8 +838,8 @@ body.tag-template #navbar {
     margin: 0 40px;
     padding: 70px 40px 100px 40px; /* 40(margin) + 40(padding) = 80 */
     border-bottom: 1px solid #e6e6e6;
-    font-size: 16px;
-    line-height: 28px; /* 28px = 16(font-size) + 12(line-spacing) */
+    font-size: 14px;
+    line-height: 22px; /* 22px = 14(font-size) + 8(line-spacing) */
     text-align: justify;
 }
 
@@ -884,7 +884,7 @@ body.tag-template #navbar {
 }
 
 #post-content p {
-    margin: 28px 0 0 0;
+    margin: 20px 0 0 0;
 }
 
 #post-content ul,
