--- a/_includes/item.html
+++ b/_includes/item.html
@@ -1,6 +1,9 @@
 <li class="post-item post {{ post.post_class }}">
     <a href="{{ post.url }}">
         <h3 class="post-title">{{ post.title }}</h3>
+{% if site.discus-identifier %}
+ <a href="{{ site.url }}{{ site.baseurl }}{{ post.url }}#disqus_thread"></a>
+{% endif %}
         <p class="post-excerpt">{{ post.excerpt | strip_html | truncatewords: 75 }}</p>
     </a>
     <p class="post-tags">
