--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -60,6 +60,12 @@ layout: default
     {% endif %}
 </div>
 
+{% if page.comments %}
+<div id="post-disqus" class="container">
+{% include disqus.html %}
+</div>
+{% endif %}
+
 <div id="lightbox">
     <div id="lightbox-image"></div>
 </div>
