--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,10 +65,6 @@
         window.location = window.location.toString().replace(/^https:/, "http:");
     }
 </script>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NZ7M7K3');</script>
-<!-- End Google Tag Manager -->
+{% if site.google_tag.ua %}
+{% include gtag_head.html %}
+{% endif %}
