update naver meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,6 +38,7 @@
 <meta name="twitter:label1" content="Written by"/>
 <meta name="twitter:data1" content="{{ meta_author }}"/>
 <meta name="twitter:image:src" content="{{ meta_image }}"/>
+<meta name="naver-site-verification" content="09329cf307365ca0143c5b64b6214b3dfbae4c95"/>
 {% if page.tags %}
 <meta name="twitter:label2" content="Filed under"/>
 <meta name="twitter:data2" content="{{ page.tags | join: ','}}"/>
